<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp" >

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:background="@drawable/avatar"
        android:contentDescription="@string/avatar" />

    <TextView
        android:id="@+id/friend_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/avatar"
        android:text="@string/app_name" />

    <ImageView
        android:id="@+id/deny_friend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:background="@drawable/deny"
        android:contentDescription="@string/deny" />

    <ImageView
        android:id="@+id/accept_friend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_toLeftOf="@id/deny_friend"
        android:background="@drawable/accept"
        android:contentDescription="@string/accept" />

</RelativeLayout>