<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                tools:context=".LoginActivity"
                android:background="@color/light_gray">

    <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            android:indeterminateBehavior="cycle"
            android:indeterminateOnly="true"
            android:layout_marginBottom="2dp"
            android:visibility="gone"/>

    <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/password"
            android:layout_alignParentBottom="true"
            android:onClick="loginListener"
            android:background="@drawable/std"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="2dp"
            android:textColor="@color/white"
            android:padding="10dp"
            android:text="@string/login"/>

    <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/username"
            android:onClick="registerListener"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:paddingBottom="5dp"
            android:text="@string/register"/>

    <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/login"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"
            android:hint="@string/password"
            android:inputType="textPassword"/>

    <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/password"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:hint="@string/username"
            android:inputType="text">

        <requestFocus/>
    </EditText>

    <CheckBox
            android:id="@+id/auto_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_alignParentBottom="true"
            android:text="@string/auto_login"/>

</RelativeLayout>