<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="@dimen/medium_margin">

    <ImageView
            android:id="@+id/avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@drawable/avatar"
            android:layout_centerVertical="true"
            android:contentDescription="@string/avatar"/>

    <TextView
            android:id="@+id/friend_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/avatar"
            android:text="@string/app_name"
            android:layout_marginLeft="@dimen/medium_margin"/>


    <CheckBox
            android:id="@+id/check_friend"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content"/>

    <ImageView
            android:id="@+id/remove_friend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/check_friend"
            android:layout_centerVertical="true"
            android:background="@drawable/remove"
            android:contentDescription="@string/remove"/>

</RelativeLayout>