<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            android:indeterminateBehavior="cycle"
            android:indeterminateOnly="true"
            android:visibility="gone"/>

    <Button
            android:id="@+id/start_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startGameListener"
            android:text="@string/quick_game"
            android:textSize="18sp"
            android:background="@drawable/std"
            android:layout_alignParentBottom="true"
            android:padding="15dp"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"/>

    <CheckBox
            android:id="@+id/private_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/private_game"
            android:layout_above="@id/start_game"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_above="@id/start_game"
            android:paddingTop="30dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_friends"
                android:layout_marginBottom="15dp"/>


        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <LinearLayout
                    android:id="@+id/friend_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</RelativeLayout>