<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/light_gray">

    <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            android:indeterminateBehavior="cycle"
            android:indeterminateOnly="true"
            android:visibility="gone"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_alignParentTop="true"
            android:layout_above="@id/quick"
            >

        <TextView
                android:id="@+id/active_games_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:textColor="@color/black"
                android:layout_marginTop="8dp"
                android:text="@string/active_games"/>

        <ScrollView
                android:id="@+id/active_games_scroll"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <LinearLayout
                    android:id="@+id/active_games"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
            </LinearLayout>
        </ScrollView>


        <!--<Button-->
        <!--android:id="@+id/how_to_play"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:onClick="howToPlayListener"-->
        <!--android:textSize="18sp"-->
        <!--android:layout_marginBottom="5dp"-->
        <!--android:text="@string/how_to_play"-->
        <!--android:background="@drawable/std"/>-->

        <!--<Button-->
        <!--android:id="@+id/friends"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textSize="18sp"-->
        <!--android:layout_marginBottom="5dp"-->
        <!--android:onClick="friendsListener"-->
        <!--android:text="@string/friends"-->
        <!--android:background="@drawable/std"/>-->

        <!--<Button-->
        <!--android:id="@+id/logout"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:onClick="logoutListener"-->
        <!--android:textSize="18sp"-->
        <!--android:layout_marginBottom="5dp"-->
        <!--android:text="@string/logout"-->
        <!--android:background="@drawable/std"/>-->


    </LinearLayout>


    <Button
            android:id="@+id/custom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="customGameListener"
            android:textSize="18sp"
            android:text="@string/custom_game"
            android:background="@drawable/std"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="1dp"
            />

    <Button
            android:id="@+id/quick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="quickGameListener"
            android:text="@string/quick_game"
            android:textSize="18sp"
            android:background="@drawable/std"
            android:layout_above="@id/custom"
            android:layout_marginBottom="1dp"/>
</RelativeLayout>
